[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/texture_fonts/UI/Components/Vector2Edit.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/texture_fonts/UI/Components/CharSetting.gd" type="Script" id=2]

[node name="CharSetting" type="VBoxContainer"]
anchor_right = 0.326172
anchor_bottom = 0.117
margin_bottom = -40.1998
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heading" type="HBoxContainer" parent="."]
margin_right = 341.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="Heading"]
margin_top = 5.0
margin_right = 17.0
margin_bottom = 19.0
text = "for"

[node name="Char" type="LineEdit" parent="Heading"]
margin_left = 21.0
margin_right = 149.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
placeholder_text = "char(s)"
caret_blink = true
caret_blink_speed = 0.5

[node name="HSeparator" type="Control" parent="Heading"]
margin_left = 153.0
margin_right = 282.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="DeleteButton" type="Button" parent="Heading"]
margin_left = 286.0
margin_right = 341.0
margin_bottom = 24.0
text = "Delete"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_top = 28.0
margin_right = 341.0
margin_bottom = 70.0
custom_constants/margin_right = 8
custom_constants/margin_left = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_right = 333.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 42.0
size_flags_horizontal = 3

[node name="Heading" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 134.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Heading"]
margin_right = 54.0
margin_bottom = 14.0
text = "Advance"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/HBoxContainer/VBoxContainer/Heading"]
margin_left = 58.0
margin_right = 134.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="SpinBox" type="SpinBox" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 134.0
margin_bottom = 42.0
min_value = -100.0

[node name="Vector2Edit" parent="MarginContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 142.0
margin_right = 325.0
margin_bottom = 42.0
size_flags_horizontal = 3
min_value = Vector2( -4096, -4096 )
max_value = Vector2( 4096, 4096 )
value = Vector2( 0, 0 )
label = "Offset"

[connection signal="text_changed" from="Heading/Char" to="." method="_on_Char_text_changed"]
[connection signal="pressed" from="Heading/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/Vector2Edit" to="." method="_on_Vector2Edit_value_changed"]
